--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <ul>
         <li>git clone path to-repository</li>
         <li> git status - статус текущего локального репозитория</li>
-        <li>git add path-to-file - добавить новый фал под контроль ГИТа</li>
+        <li>git add path-to-file - зафиксировать изменения и дать им комментарий</li>
+		<li>git push - отправить все закоммиченные изменения в репозиторий на сервер</li>
+		<li>git pull - забрать свежие обновления</li>
+		
     </ul>
 </div>
